--- a/index.html
+++ b/index.html
@@ -10,26 +10,12 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="dist/css/review-gate.min.css" />
+    <link rel="stylesheet" href="./demo-styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      html,
-      body {
-        background-color: #f8f8f8;
-        color: #222;
-        font-family: "Poppins", sans-serif;
-        font-size: 17px;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
   </head>
 
   <body>
